# arcanumpy

./: .buildinfo  .gitignore  CNAME  MANIFEST.in  README.md  about.html  citation.html  functions.html  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: about.doctree  citation.doctree  environment.pickle  functions.doctree  index.doctree  install.doctree  modules.doctree
_modules/: index.html
_sources/: about.rst.txt  functions.rst.txt  index.rst.txt
arcanum/: __init__.py  __version__.py  get_files_from_cdaweb.py  get_files_from_web.py  hist_test.py  histogram_plots.py
arcanumpy/: SeabornFig2Grid.py  __init__.py  __version__.py  get_files_from_web.py  hist_test.py  histogram_plots.py  img_to_mp4.py  seaborn_plots_fncs.py  text_color_fnc.py
docs/: .buildinfo  about.html  citation.html  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
rst_files/: arcanumpy.SeabornFig2Grid.html  arcanumpy.arcanum.html  arcanumpy.arcanumpy.html  arcanumpy.get_files_from_web.html  arcanumpy.hist_test.html  arcanumpy.histogram_plots.html  arcanumpy.histogram_sample.html  arcanumpy.html  arcanumpy.img_to_mp4.html  arcanumpy.seaborn_plots.html  arcanumpy.seaborn_plots_fncs.html  arcanumpy.tests.html  arcanumpy.tests.test_arcanumpy.html  arcanumpy.text_color_fnc.html  modules.html
src/: citation.rst  conf.py  functions.rst  index.rst  install.rst  modules.rst  requirements.txt  update_index_rst_file.py  (+4 more)
(+86 files in other folders)
