[tool.poetry]
name = "arcanumpy"
version = "0.1.1"
description = "Personal selection of random functions and codes in Python"
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]
license = "GPL V3"
readme = "README.md"
homepage = "https://qudsiramiz.space/arcanumpy/"
repository = "https://github.com/qudsiramiz/arcanumpy/"
documentation = "https://qudsiramiz.space/arcanumpy/"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
cdflib = "^1.3.2"
imageio = "^2.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
